# mcp-server

./: README.md  pyproject.toml
zero_mcp/: __init__.py  server.py
